libs/toolkit-macros-tests/tests/ui/fail/deps_not_array.rs
use toolkit_macros::module;

#[module(name="x", deps="db")]
pub struct X;

fn main() {}
